# libusbmassstorage

./: Makefile.am  configure.in  libusbmassstorage-config.src.in  libusbmassstorage.pc.src.in  version-files
app/: Makefile.am  usbmassstorage.c
maintainer/: tag
src/: Makefile.am  ext_prototypes.h  hexdump.c  libusbmassstorage.c  project.h  prototypes.h  scsi.c  scsireg.h  transport.c  usbmassstorage-head.h.in  usbmassstorage-tail.h  util.c  util.h  version.c
test/: Makefile.am  test.c
