dnl
dnl
dnl configure.in:
dnl
dnl
dnl $Id:$
dnl
dnl $Log:$
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT(src/libusbmassstorage.c)

AC_PROG_CC
AC_SYS_LARGEFILE


LIBUSBMASSSTORAGE_MAJOR_VERSION=`cat $srcdir/version-major`
LIBUSBMASSSTORAGE_MINOR_VERSION=`cat $srcdir/version-minor`
LIBUSBMASSSTORAGE_MICRO_VERSION=`cat $srcdir/version-micro`



LIBUSBMASSSTORAGE_INTERFACE_VERSION_MIN=$LIBUSBMASSSTORAGE_MINOR_VERSION
LIBUSBMASSSTORAGE_INTERFACE_VERSION_MAX=$LIBUSBMASSSTORAGE_MINOR_VERSION
LIBUSBMASSSTORAGE_INTERFACE_REVISION=1

LIBUSBMASSSTORAGE_VERSION=$LIBUSBMASSSTORAGE_MAJOR_VERSION.$LIBUSBMASSSTORAGE_MINOR_VERSION.$LIBUSBMASSSTORAGE_MICRO_VERSION

AC_SUBST(LIBUSBMASSSTORAGE_MAJOR_VERSION)
AC_SUBST(LIBUSBMASSSTORAGE_MINOR_VERSION)
AC_SUBST(LIBUSBMASSSTORAGE_MICRO_VERSION)
AC_SUBST(LIBUSBMASSSTORAGE_VERSION)

AC_SUBST(LIBUSBMASSSTORAGE_INTERFACE_VERSION_MIN)
AC_SUBST(LIBUSBMASSSTORAGE_INTERFACE_VERSION_MAX)
AC_SUBST(LIBUSBMASSSTORAGE_INTERFACE_REVISION)


LT_RELEASE=$LIBUSBMASSSTORAGE_MAJOR_VERSION.$LIBUSBMASSSTORAGE_MINOR_VERSION
LT_CURRENT=$LIBUSBMASSSTORAGE_INTERFACE_VERSION_MAX
LT_REVISION=$LIBUSBMASSSTORAGE_MICRO_VERSION
LT_AGE=`expr $LIBUSBMASSSTORAGE_INTERFACE_VERSION_MAX - $LIBUSBMASSSTORAGE_INTERFACE_VERSION_MIN`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

VERSION=$LIBUSBMASSSTORAGE_VERSION
PACKAGE=libusbmassstorage

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_PROG_LIBTOOL

AM_CONFIG_HEADER(src/config.h)

AC_CHECK_PROG(MD5SUM,md5sum,md5sum)
AC_CHECK_PROG(GREP,grep,grep)
AC_CHECK_PROG(SED,sed,sed)
AC_PROG_AWK

dnl AC_DEFINE_UNQUOTED(LIBUSBMASSSTORAGE_MAJOR_VERSION, $LIBUSBMASSSTORAGE_MAJOR_VERSION)
dnl AC_DEFINE_UNQUOTED(LIBUSBMASSSTORAGE_MINOR_VERSION, $LIBUSBMASSSTORAGE_MINOR_VERSION)
dnl AC_DEFINE_UNQUOTED(LIBUSBMASSSTORAGE_MICRO_VERSION, $LIBUSBMASSSTORAGE_MICRO_VERSION)

AC_CHECK_HEADERS(fcntl.h malloc.h sys/ioctl.h unistd.h)
AC_CHECK_HEADERS(sys/scsi/impl/uscsi.h scsi/sg.h stdint.h)
AC_CHECK_HEADERS(sys/int_types.h string.h strings.h)
AC_CHECK_HEADERS(dirent.h sys/stat.h)

AC_C_INLINE
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_FUNCS(select strdup strstr)

I2_TM_H=$ac_cv_struct_tm

I2_HAVE_STDINT_H=0
I2_HAVE_SYS_INT_TYPES_H=0
if test "$ac_cv_header_sys_int_types_h" = "yes"; then
	I2_HAVE_SYS_INT_TYPES_H=1
fi
if test "$ac_cv_header_stdint_h" = "yes"; then
	I2_HAVE_STDINT_H=1
fi
I2_HAVE_UNISTD_H=0
if test "$ac_cv_header_unistd_h" = "yes"; then
	I2_HAVE_UNISTD_H=1
fi

AC_SUBST(I2_TM_H)
AC_SUBST(I2_HAVE_STDINT_H)
AC_SUBST(I2_HAVE_SYS_INT_TYPES_H)
AC_SUBST(I2_HAVE_UNISTD_H)



#LIBUSB-1.0_CONFIG=no
#AC_ARG_WITH(libusb-1.0,
#        AC_HELP_STRING([--with-libusb-1.0=PATH],[Path to libusb-1.0-config]),
#                LIBUSB-1.0_CONFIG=$with_libusb-1.0,LIBUSB-1.0_CONFIG=no)
#
#case "x$LIBUSB-1.0_CONFIG" in
#        xno)
#		AC_PATH_PROG(LIBUSB-1.0_CONFIG, libusb-1.0-config, no)
#        ;;
#        x|xyes)
#		AC_PATH_PROG(LIBUSB-1.0_CONFIG, libusb-1.0-config, no)
#        ;;
#        *)
#        ;;
#esac
#
#if ! test -x $LIBUSB-1.0_CONFIG; then
#  AC_MSG_ERROR(can't find libusb-1.0-config use --with-libusb-1.0=/... option)
#fi

#LIBUSB-1.0_INC=`$LIBUSB-1.0_CONFIG --cflags`
#LIBUSB-1.0_LIB=`$LIBUSB-1.0_CONFIG --libs`

#AC_SUBST(LIBUSB-1.0_INC)
#AC_SUBST(LIBUSB-1.0_LIB)

PKG_CHECK_MODULES([LIBUSB], [libusb-1.0])

AC_OUTPUT([Makefile 
	src/Makefile 
	src/usbmassstorage-head.h
	test/Makefile 
	app/Makefile
	libusbmassstorage.pc.src
	libusbmassstorage-config.src],[chmod +x libusbmassstorage-config.src])

